kind of fixed alignment of skills bubble but have issues alignment the bar with the icon.

--- a/src/CSS/Resume.css
+++ b/src/CSS/Resume.css
@@ -90,26 +90,15 @@
 }
 
 .programmingSkill {
-    border-width: 3px;
-    border-style: solid;
-    height: 88%;
+    /* border-width: 1px;
+    border-style: solid; */
+    height: 75%;
     width: 95%;
     margin-top: 8%;
-    margin-left: 4%;
-    /* line-height: 40%; */
+    margin-left: 2%;
 }
 
 .educationBox {
-    /* background-color: #F4F4F4; */
-    /* border-style: solid;
-    border-width: 3px;
-    border-color: #C5C5C5;
-    border-radius: 25px;
-    width: 30%;
-    height: 35%;
-    left: 34%;
-    position: fixed;
-    top: 20%; */
     font-family: 'Inconsolata', monospace;
     border-style: solid;
     border-width: 3px;
@@ -170,19 +159,26 @@
 .icon {
     width: 40px;
     height: 40px;
-    margin-bottom: 1%;
+    margin-bottom: auto;
+    padding-bottom: 5%;
+    position: relative;
 }
 
-.firstProgramming {
-    border-style: solid;
-    position: fixed;
-    width: 30%;
-    height: 50%;
-    margin-left: 1%;
-    line-height: 40px; 
+#otherSkills {
+    font-family: 'Inconsolata', monospace;
+    font-size: 15px;
+    font-style: oblique;
 }
 
-.secondProgramming {
-    width: 45%;
-    right: 50%;   
+#bar {
+    font-family: 'Inconsolata', monospace;
+    vertical-align: baseline;
+
+    /* position: absolute; */
+    /* margin-top: 0%; */
+    /* display: flex;
+  align-items: center; */
+    
+    /* text-align: center; */
+    /* position: fixed; */
 }
